--- a/imagery/i.emissivity/i.emissivity.html
+++ b/imagery/i.emissivity/i.emissivity.html
@@ -2,7 +2,7 @@
 
 <em>i.emissivity</em> calculates the emissivity in the longwave radiation
 spectrum, according to the semi-empirical equation related to NDVI by
-Caselles and Colles (1997), valid in the NDVI range of 0.16 to 0.74.
+Caselles and Coll (1997), valid in the NDVI range of 0.16 to 0.74.
 <p>
 Estimation in the 8-14 micrometers range for sparse canopy...
 <!-- TODO: incomplete phrase! -->
@@ -12,6 +12,14 @@ Estimation in the 8-14 micrometers range for sparse canopy...
 <em>
 <a href="i.eb.netrad.html">i.eb.netrad</a><br>
 </em>
+
+<h2>REFERENCES</h2>
+Caselles, V., C. Coll, and E. Valor. "Land surface emissivity and temperature determination in the whole HAPEX-Sahel area from AVHRR data." International Journal of Remote Sensing 18.5 (1997): 1009-1027.
+<p>
+Rubio, E., V. Caselles, and C. Badenas. "Emissivity measurements of several soils and vegetation types in the 8–14, μm Wave band: Analysis of two field methods." Remote Sensing of Environment 59.3 (1997): 490-521.
+<p>
+
+
 
 <h2>AUTHORS</h2>
 Yann Chemin, GRASS Development Team<br>
