r.random.surface + r.surf.random manuals: crosslink pages
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68583 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.surf.random/r.surf.random.html
+++ b/raster/r.surf.random/r.surf.random.html
@@ -24,6 +24,7 @@ r.univar random
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="r.random.surface.html">r.random.surface</a>, 
 <a href="r.surf.contour.html">r.surf.contour</a>,
 <a href="r.surf.fractal.html">r.surf.fractal</a>,
 <a href="r.surf.gauss.html">r.surf.gauss</a>,
