--- a/raster/r.random.surface/r.random.surface.html
+++ b/raster/r.random.surface/r.random.surface.html
@@ -144,9 +144,10 @@ Goodchild. Proceedings, GIS/LIS'94, pp. 246-253, Phoenix AZ,
 <h2>SEE ALSO</h2>
 
 <em>
-  <a href="r.random.html">r.random</a>, 
-  <a href="r.random.cells.html">r.random.cells</a>, 
-  <a href="r.mapcalc.html">r.mapcalc</a>
+<a href="r.random.html">r.random</a>, 
+<a href="r.random.cells.html">r.random.cells</a>, 
+<a href="r.mapcalc.html">r.mapcalc</a>,
+<a href="r.surf.random.html">r.surf.random</a>
 </em>
 
 <h2>AUTHORS</h2>
