--- a/imagery/i.emissivity/i.emissivity.html
+++ b/imagery/i.emissivity/i.emissivity.html
@@ -2,11 +2,11 @@
 
 <em>i.emissivity</em> calculates the emissivity in the longwave radiation
 spectrum, according to the semi-empirical equation related to NDVI by
-Caselles and Coll (1997), valid in the NDVI range of 0.16 to 0.74.
+Caselles et al. (1997), valid in the NDVI range of 0.16 to 0.74 (Bastiaanssen, 1995).
 <p>
-Estimation in the 8-14 micrometers range for sparse canopy...
-<!-- TODO: incomplete phrase! -->
-
+Caselles et al. (1997) gives reference, in Table 3 and Figure 2, to both the NDVI range used (0.15 - 0.71) and the corresponding emissivity range used (0.97 - 0.99). 
+<p>
+The emissivity is the efficiency of longwave energy returning to the atmosphere from the skin surface. The skin surface receives heat from the thermal infrared radiation of the Sun, through atmospheric interaction. A part is returned to the atmosphere fast, and another part is kept in the surface skin to be returned later. In more scientific terms, the grey body radiation is equal to the black body radiation times the emissivity.
 <h2>SEE ALSO</h2>
 
 <em>
@@ -14,9 +14,14 @@ Estimation in the 8-14 micrometers range for sparse canopy...
 </em>
 
 <h2>REFERENCES</h2>
-Caselles, V., C. Coll, and E. Valor. "Land surface emissivity and temperature determination in the whole HAPEX-Sahel area from AVHRR data." International Journal of Remote Sensing 18.5 (1997): 1009-1027.
-<p>
-Rubio, E., V. Caselles, and C. Badenas. "Emissivity measurements of several soils and vegetation types in the 8–14, μm Wave band: Analysis of two field methods." Remote Sensing of Environment 59.3 (1997): 490-521.
+<p>Bastiaanssen, W.G.M., 1995.
+  Estimation of Land surface parameters by remote sensing under clear-sky
+conditions. PhD thesis, Wageningen University, Wageningen, The Netherlands.
+(<a href="http://edepot.wur.nl/206553">PDF</a>)
+
+<p>Caselles, V., C. Coll, and E. Valor. "Land surface emissivity and temperature determination in the whole HAPEX-Sahel area from AVHRR data." International Journal of Remote Sensing 18.5 (1997): 1009-1027.
+
+<p>Rubio, E., V. Caselles, and C. Badenas. "Emissivity measurements of several soils and vegetation types in the 8–14, μm Wave band: Analysis of two field methods." Remote Sensing of Environment 59.3 (1997): 490-521.
 <p>
 
 
