--- a/imagery/i.emissivity/i.emissivity.html
+++ b/imagery/i.emissivity/i.emissivity.html
@@ -4,29 +4,42 @@
 spectrum, according to the semi-empirical equation related to NDVI by
 Caselles et al. (1997), valid in the NDVI range of 0.16 to 0.74 (Bastiaanssen, 1995).
 <p>
-Caselles et al. (1997) gives reference, in Table 3 and Figure 2, to both the NDVI range used (0.15 - 0.71) and the corresponding emissivity range used (0.97 - 0.99). 
+Caselles et al. (1997) give reference (in Table 3 and Figure 2) to both
+the NDVI range used (0.15 - 0.71) and the corresponding emissivity range
+used (0.97 - 0.99). 
 <p>
-The emissivity is the efficiency of longwave energy returning to the atmosphere from the skin surface. The skin surface receives heat from the thermal infrared radiation of the Sun, through atmospheric interaction. A part is returned to the atmosphere fast, and another part is kept in the surface skin to be returned later. In more scientific terms, the grey body radiation is equal to the black body radiation times the emissivity.
+The emissivity is the efficiency of longwave energy returning to the
+atmosphere from the skin surface. The skin surface receives heat from
+the thermal infrared radiation of the Sun, through atmospheric interaction.
+A part is returned to the atmosphere fastly, and another part is kept in
+the surface skin to be returned later. In more scientific terms, the
+grey body radiation is equal to the black body radiation times the emissivity.
+
 <h2>SEE ALSO</h2>
 
 <em>
-<a href="i.eb.netrad.html">i.eb.netrad</a><br>
+<a href="i.eb.netrad.html">i.eb.netrad</a>
 </em>
 
 <h2>REFERENCES</h2>
-<p>Bastiaanssen, W.G.M., 1995.
+
+<ul>
+<li> Bastiaanssen, W.G.M., 1995.
   Estimation of Land surface parameters by remote sensing under clear-sky
-conditions. PhD thesis, Wageningen University, Wageningen, The Netherlands.
-(<a href="http://edepot.wur.nl/206553">PDF</a>)
+  conditions. PhD thesis, Wageningen University, Wageningen, The Netherlands.
+  (<a href="http://edepot.wur.nl/206553">PDF</a>)</li>
+<li> Caselles, V., C. Coll, and E. Valor, 1997.
+  Land surface emissivity and temperature determination in the whole
+  HAPEX-Sahel area from AVHRR data. International Journal of Remote
+  Sensing 18(5):1009-1027.</li>
+<li> Rubio, E., V. Caselles, and C. Badenas, 1997.
+  Emissivity measurements of several soils and vegetation types in the
+  8-14 &micro;m wave band: Analysis of two field methods. Remote Sensing of
+  Environment 59(3): 490-521.
+</ul>
 
-<p>Caselles, V., C. Coll, and E. Valor. "Land surface emissivity and temperature determination in the whole HAPEX-Sahel area from AVHRR data." International Journal of Remote Sensing 18.5 (1997): 1009-1027.
+<h2>AUTHOR</h2>
 
-<p>Rubio, E., V. Caselles, and C. Badenas. "Emissivity measurements of several soils and vegetation types in the 8–14, μm Wave band: Analysis of two field methods." Remote Sensing of Environment 59.3 (1997): 490-521.
-<p>
-
-
-
-<h2>AUTHORS</h2>
 Yann Chemin, GRASS Development Team<br>
 
 <p><i>Last changed: $Date$</i>
