i.atcorr: added support for Pleiades1a, Pleiades1b, Spot6, Spot7 (contributed by craab, trac https://trac.osgeo.org/grass/ticket/3054)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68630 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.atcorr/i.atcorr.html
+++ b/imagery/i.atcorr/i.atcorr.html
@@ -184,6 +184,35 @@ the ascendant node at equator</td>
 <td>enter month,day,hh.ddd,long.,lat. *</td>
 </tr>
 
+
+<tr>
+<td>20</td>
+<td><b>Spot6</b></td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
+
+
+<tr>
+<td>21</td>
+<td><b>Spot7</b></td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
+
+
+<tr>
+<td>22</td>
+<td><b>Pleiades1A</b></td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
+
+
+<tr>
+<td>23</td>
+<td><b>Pleiades1B</b></td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
+
+
 </table>
 
 <blockquote>
@@ -613,6 +642,34 @@ micrometer.</td>
 <tr><td>117</td><td>GeoEye 1 Green Band (0.510-0.580)</td></tr>
 <tr><td>118</td><td>GeoEye 1 Red Band (0.655-0.690)</td></tr>
 <tr><td>120</td><td>GeoEye 1 NIR Band (0.780-0.920)</td></tr>
+
+
+<tr><td>129</td><td><b>Spot6</b> Blue band (455nm - 525nm)</td></tr>
+<tr><td>130</td><td>Spot6 Green band  (530nm - 527nm)</td></tr>
+<tr><td>131</td><td>Spot6 Red band  (625nm - 695nm)</td></tr>
+<tr><td>132</td><td>Spot6 NIR band  (760nm - 890nm)</td></tr>
+<tr><td>133</td><td>Spot6 Pan band  (455nm - 745nm)</td></tr>
+
+
+<tr><td>134</td><td><b>Spot7</b> Blue band (455nm - 525nm)</td></tr>
+<tr><td>135</td><td>Spot7 Green band  (530nm - 527nm)</td></tr>
+<tr><td>136</td><td>Spot7 Red band  (625nm - 695nm)</td></tr>
+<tr><td>137</td><td>Spot7 NIR band  (760nm - 890nm)</td></tr>
+<tr><td>138</td><td>Spot7 Pan band  (455nm - 745nm)</td></tr>
+
+
+<tr><td>139</td><td><b>Pleiades1A</b> Blue band (430nm - 550nm)</td></tr>
+<tr><td>140</td><td>Pleiades1A Green band  (490nm - 610nm)</td></tr>
+<tr><td>141</td><td>Pleiades1A Red band  (600nm - 720nm)</td></tr>
+<tr><td>142</td><td>Pleiades1A NIR band  (750nm - 950nm)</td></tr>
+<tr><td>143</td><td>Pleiades1A Pan band  (480nm - 830nm)</td></tr>
+
+
+<tr><td>144</td><td><b>Pleiades1B </b> Blue band (430nm - 550nm)</td></tr>
+<tr><td>145</td><td>Pleiades1B Green band  (490nm - 610nm)</td></tr>
+<tr><td>146</td><td>Pleiades1B Red band  (600nm - 720nm)</td></tr>
+<tr><td>147</td><td>Pleiades1B NIR band  (750nm - 950nm)</td></tr>
+<tr><td>148</td><td>Pleiades1B Pan band  (480nm - 830nm)</td></tr>
 
 </table>
 
