Update link in r.param.scale (#3070)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68728 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.param.scale/r.param.scale.html
+++ b/raster/r.param.scale/r.param.scale.html
@@ -89,15 +89,15 @@ tables for all output files (presently only on features).
 
 <h2>REFERENCES</h2>
 
-Wood, J. (1996): The Geomorphological characterisation of Digital Elevation
-Models. Diss., Department of Geography, University of Leicester, U.K.
-
-<br>online at:
-<br><a href="http://www.soi.city.ac.uk/~jwo/phd/">http://www.soi.city.ac.uk/~jwo/phd/</a>
-
-<p>Java Code in
-<a href="http://www.geog.le.ac.uk/jwo/research/LandSerf">LandSerf</a>
-that implements the same procedure
+<ul>
+  <li>Wood, J. (1996): The Geomorphological characterisation of
+    Digital Elevation Models. Diss., Department of Geography, University
+    of Leicester, U.K<br>online at:
+    <a href="http://hdl.handle.net/2381/34503">http://hdl.handle.net/2381/34503</a></li>
+  <li>Java Code in
+    <a href="http://www.geog.le.ac.uk/jwo/research/LandSerf">LandSerf</a>
+    that implements the same procedure</li>
+</ul>
 
 <h2>SEE ALSO</h2>
 <!-- not ported to GRASS 6 due to non-GPLness of numerical recipes.
