--- a/raster/r.tile/r.tile.html
+++ b/raster/r.tile/r.tile.html
@@ -10,7 +10,10 @@ This is equivalent to running <em>g.region</em> along with
 <em>r.resample</em> in a double loop.
 <p>
 The module can be used to split a large raster map into smaller
-tiles, e.g. for further parallelized analysis on a cluster.
+tiles, e.g. for further parallelized analysis on a cluster computing
+system.
+<p>
+The overlap is defined in rows/columns.
 
 <h2>EXAMPLE</h2>
 
