v.db.addcolumn, v.db.addtable + manual: clarify and standardize name and type of new column(s)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68770 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/db/sqlp/sql.html
+++ b/lib/db/sqlp/sql.html
@@ -76,6 +76,10 @@ d.vect map where="individual='juvenile' and area='beach'"
 <li> DBF column names are limited to 10 characters (DBF API definition).</li>
 </ul>
 
+<h3>Database table column types</h3>
+
+The supported types of columns depend on the database backend. However, all backends
+should support VARCHAR, INT, DOUBLE PRECISION and DATE.
 
 <h2>EXAMPLES</h2>
 
