--- a/scripts/v.db.addtable/v.db.addtable.html
+++ b/scripts/v.db.addtable/v.db.addtable.html
@@ -9,8 +9,8 @@ the MAPSET database settings (see <em>db.connect</em>).
 
 <em>v.db.addtable</em> is a front-end to <em>db.execute</em> to allow easier
 usage.
-
-v.db.addtable will only insert category values into the table for those features 
+<p>
+<em>v.db.addtable</em> will only insert category values into the table for those features 
 which actually have a category value in the relevant layer. The use can add 
 category values automatically by using <em>v.category</em> or manually with 
 <em><a href="wxGUI.vdigit.html">wxGUI vector digitizer</a></em>
@@ -18,7 +18,7 @@ before running v.db.addtable. Or one can run v.db.addtable first
 and then use either a combinatino of <em>v.category</em> + <em>v.to.db</em> or 
 <em><a href="wxGUI.vdigit.html">wxGUI vector digitizer</a></em>
 to add the relevant lines to the table.
-
+<p>
 The supported types of columns depend on the database backend. However, all
 backends should support VARCHAR, INT, DOUBLE PRECISION and DATE.
 <p>The existing database connection(s) can be verified with <em>v.db.connect</em>.
