--- a/temporal/t.sample/t.sample.html
+++ b/temporal/t.sample/t.sample.html
@@ -51,8 +51,8 @@ r.mapcalc expression="a5 = rand(0, 300)" -s
 r.mapcalc expression="a6 = rand(0, 650)" -s
 
 # Generate the vector map layer
-v.random -z output=pnts1 n=20 zminput=0 zmax=100 column=height
-v.random -z output=pnts2 n=20 zminput=0 zmax=100 column=height
+v.random -z output=pnts1 n=20 zmin=0 zmax=100 column=height
+v.random -z output=pnts2 n=20 zmin=0 zmax=100 column=height
 
 n1=`g.tempfile pid=1 -d` 
 n2=`g.tempfile pid=2 -d`
