--- a/temporal/t.vect.import/t.vect.import.html
+++ b/temporal/t.vect.import/t.vect.import.html
@@ -24,7 +24,7 @@ The space time dataset is then exported and re-imported.
 db.connect -d
 
 for i in `seq 1 5` ; do
-    v.random output=map_$i n=500 input=boundary_state@PERMANENT
+    v.random output=map_$i n=500 restrict=boundary_state@PERMANENT
     echo map_$i &gt;&gt; map_list.txt
 done
 
