--- a/lib/init/helptext.html
+++ b/lib/init/helptext.html
@@ -160,16 +160,22 @@ related Wiki page on <a href="http://grasswiki.osgeo.org/wiki/Importing_data">Im
 
 <h2>5. Text-based startup and location creation</h2>
 
-GRASS GIS can be run entirely without using the graphical user interface. For a first time startup, the following steps have to be followed:
+GRASS GIS can be run entirely without using the graphical user interface.
+For a first time startup, the following steps have to be followed:
 
 <ol>
-	<li> Create a GRASS database as explained above.</li>
-	<li>Create a new location, including it's default PERMANENT mapset, without entering the new location:</li>
-		<ul>
-			<li>Using an EPSG code: <tt>grass70 -e -c EPSG:32630 /home/myuser/GRASSDATA/mylocation</tt></li>
-			<li>Using a georeferenced file: <tt>grass70 -e -c MyGeoReferenceFile.tif /home/myuser/GRASSDATA/mylocation</tt></li>
-		</ul>
-		<li>Create new mapset within the new location and launch GRASS GIS within that mapset: <br><tt>grass70 -c /home/myuser/GRASSDATA/mylocation/mymapset </tt>
+<li> Create a GRASS GIS database as explained above.</li>
+<li> Create a new location, including it's default PERMANENT mapset,
+     without entering the new location:</li>
+<ul>
+    <li>Using an EPSG code:<br>
+        &nbsp;<tt>grass73 -e -c EPSG:32630 /home/user/grassdata/mylocation</tt></li>
+    <li>Using a georeferenced raster or vector file:<br>
+        &nbsp;<tt>grass73 -e -c MyGeoReferenceFile.tif /home/user/grassdata/mylocation</tt></li>
+</ul>
+<li> Create new mapset within the new location and launch GRASS GIS within
+     that mapset: <br>
+        &nbsp;<tt>grass73 -c /home/user/grassdata/mylocation/mymapset</tt>
 </ol>
 
 
@@ -185,6 +191,9 @@ Please have a look at the GRASS GIS web site for tutorials and books:
 <br>
  <a href="grass7.html">GRASS GIS 7 startup program manual page</a>
 </em>
+
+<p>
+ <a href="http://epsg.io/">List of EPSG codes</a> (Database of worldwide coordinate systems)
 
 <p>
 <i>Last changed: $Date$</i>
