Patch to fix various spelling errors (see #3088)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68820 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.vect.thematic/d.vect.thematic.html
+++ b/display/d.vect.thematic/d.vect.thematic.html
@@ -24,7 +24,7 @@ via <em><a href="g.extension.html">g.extension</a></em>.
 
 The <b>-l</b> flag instructs the module to print legend information
 (<i>class min | class max | number of observations in class |
-color</i>) to standard output for futher use in graphical software.
+color</i>) to standard output for further use in graphical software.
 When combined with the <b>-e</b> flag, the legend information will
 be extended with some additional statistical information. If the
 <b>-n</b> flag is set, the module will only print the legend 
