--- a/imagery/i.segment/i.segment.html
+++ b/imagery/i.segment/i.segment.html
@@ -1,6 +1,6 @@
 <h2>DESCRIPTION</h2>
 Image segmentation or object recognition is the process of grouping 
-similar pixels into unique segments, also refered to as objects. 
+similar pixels into unique segments, also referred to as objects. 
 Boundary and region based algorithms are described in the literature, 
 currently a region growing and merging algorithm is implemented. Each 
 object found during the segmentation process is given a unique ID and 
@@ -46,7 +46,7 @@ of 0 would allow only identical valued pixels to be merged, while a
 threshold of 1 would allow everything to be merged. Initial empirical 
 tests indicate threshold values of 0.01 to 0.05 are reasonable values 
 to start. It is recommended to start with a low value, e.g. 0.01, and 
-then perform hierachical segmentation by using the output of the last 
+then perform hierarchical segmentation by using the output of the last 
 run as <b>seeds</b> for the next run.
 
 <h4>Calculation Formulas</h4>
