--- a/vector/vectorintro.html
+++ b/vector/vectorintro.html
@@ -67,7 +67,7 @@ topological GIS this border exists once and is shared between two
 areas.  Topological representation of vector data helps to produce and
 maintain vector maps with clean geometry as well as enables certain
 analyses that can not be conducted with non-topological or spaghetti
-data. In GRASS, topological data are refered to as level 2 data and
+data. In GRASS, topological data are referred to as level 2 data and
 spaghetti data is referred to as level 1.
 <p>
 Sometimes topology is not necessary and the additional memory and
