--- a/raster/r.out.pov/r.out.pov.html
+++ b/raster/r.out.pov/r.out.pov.html
@@ -5,7 +5,7 @@ height-field file for POVray (tga==name). The hftype==value option (where
 value is either 0 or 1) specifies the height-field type. When the user
 enters 0 the output will be actual heights. If entered 1 the cell-values
 will be normalized. If hftype is 0 (actual heights) the bias==value can
-be used to add or substract a value from heights. Use scale==value to scale
+be used to add or subtract a value from heights. Use scale==value to scale
 your heights by value. The GRASS program r.out.pov can be used to create
 height- field files for Persistence of Vision (POV) raytracer. POV can
 use a height-field defined in Targa (.TGA) image file format where the
